--- a/app/src/main/res/layout/fragment_nueva_rutina_ejercicio.xml
+++ b/app/src/main/res/layout/fragment_nueva_rutina_ejercicio.xml
@@ -19,6 +19,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNombreRutina" />
 
+    <Spinner
+        android:id="@+id/SpCategoriaNuevaRutina"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spDiasRutinaNuevaNueva" />
+
     <TextView
         android:id="@+id/tvNombreRutina"
         android:layout_width="match_parent"
@@ -32,35 +44,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tlCategoriaRutinaEjercicio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spDiasRutinaNuevaNueva" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vpCategoriaRutinaEjercicio"
-        android:layout_width="414dp"
-        android:layout_height="347dp"
-        android:layout_weight="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tlCategoriaRutinaEjercicio" />
-
     <Button
         android:id="@+id/btAgregarRutina"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
         android:text="Crear rutina"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vpCategoriaRutinaEjercicio"
-        app:layout_constraintVertical_bias="0.192" />
+        app:layout_constraintTop_toBottomOf="@+id/lvEjerciciosRutina" />
+
+    <ListView
+        android:id="@+id/lvEjerciciosRutina"
+        android:layout_width="409dp"
+        android:layout_height="289dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SpCategoriaNuevaRutina" />
 </androidx.constraintlayout.widget.ConstraintLayout>
