--- a/app/src/main/res/layout/fragment_ejercicios_categoria_rutina.xml
+++ b/app/src/main/res/layout/fragment_ejercicios_categoria_rutina.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.rutinas.EjerciciosCategoriaRutinaFragment" >
 
     <ListView
-        android:id="@+id/lvEjerciciosRutina"
+        android:id="@+id/lvEjerciciosRutinaqqq"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="1dp"
