--- a/app/src/main/res/layout/fragment_pago.xml
+++ b/app/src/main/res/layout/fragment_pago.xml
@@ -12,15 +12,26 @@
         android:id="@+id/btPagar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="144dp"
         android:background="#F44336"
         android:backgroundTint="#F44336"
         android:text="Pagar con Mercado Pago"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lvPagos"
+        tools:ignore="MissingConstraints" />
+
+    <ListView
+        android:id="@+id/lvPagos"
+        android:layout_width="318dp"
+        android:layout_height="256dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.484"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
