--- a/app/src/main/res/layout/item_ejercicio_check.xml
+++ b/app/src/main/res/layout/item_ejercicio_check.xml
@@ -7,11 +7,11 @@
 
     <CheckBox
         android:id="@+id/ctvDescripcionEjercicio"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Descripción"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
